# sjup

./: .flake8  README.md  __init__.py  noxfile.py  pyproject.toml
conda/: meta.yaml
src/sjup/: cli.py  exceptions.py  utils.py
src/sjup/backends/: __init__.py  base.py  exceptions.py  local.py  slurm.py
src/sjup/plugins/: config.py  list.py  serve.py
