[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Dan Søndergaard", email = "das@genome.au.dk" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
name = "sjup"
readme = "README.rst"
requires-python = ">=3.7"

dependencies = [
    "click",
    "click-plugins",
    "attrs",
    # Used to discover plugins and backends, see:
    # https://packaging.python.org/guides/creating-and-discovering-plugins/
    "importlib_metadata>4.6; python_version<'3.8'",
]

[project.optional-dependencies]
dev = ["black", "isort", "nox"]

[project.scripts]
sjup = "sjup.cli:main"

[project.entry-points."sjup.plugins"]
attach = "sjup.plugins.attach:canattachcel"
batch = "sjup.plugins.batch:batch"
close = "sjup.plugins.close:close"
config = "sjup.plugins.config:config"
info = "sjup.plugins.info:info"
serve = "sjup.plugins.serve:serve"
status = "sjup.plugins.status:status"

[project.entry-points."sjup.backends"]
local = "sjup.backends.local:setup"
slurm = "sjup.backends.slurm:setup"

[project.urls]
Home = "https://munch-group.or/software/sjup"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
sort = "Cover"
exclude_lines = ["@attrs"]